Moved "Hide Assessment Nav" option to the "Assessments" settings page.  Renamed "Site settings" and "Advanced" and changed CSS to prevent them from word-wrapping. 	Change on 2015/10/28 by nretallack <nretallack@google.com> ------------- Created by MOE: https://github.com/google/moe MOE_MIGRATED_REVID=106546805

--- a/coursebuilder/modules/dashboard/_static/css/view.css
+++ b/coursebuilder/modules/dashboard/_static/css/view.css
@@ -526,12 +526,16 @@ label.settings.togglebutton {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 30px;
-  padding-right: 30px;
+  padding-right: 0;
   cursor: pointer;
   position: relative;
   font-size: 15px;
   font-weight: 300;
   color: #fff;
+}
+
+.mdl-layout__drawer .mdl-navigation .gcb-menu .mdl-navigation__link.gcb-collapse__button {
+  padding-right: 30px;
 }
 
 .mdl-layout__drawer .mdl-navigation .mdl-navigation__link:hover {
